--- a/MojiCollaTool/MojiCollaTool/MainWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/MainWindow.xaml
@@ -73,7 +73,7 @@
                 <TextBlock Text="文字を追加する" VerticalAlignment="Center"/>
             </StackPanel>
         </Button>
-        <Grid x:Name="CanvasGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Background="Gray" PreviewMouseWheel="CanvasGrid_PreviewMouseWheel">
+        <Grid x:Name="CanvasGrid" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Background="Gray" AllowDrop="True" Drop="CanvasGrid_Drop" DragOver="CanvasGrid_DragOver" PreviewMouseWheel="CanvasGrid_PreviewMouseWheel">
             <ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
                 <Canvas x:Name="MainCanvas" Background="Gray" Grid.Column="0">
                     <Canvas.LayoutTransform>
