--- a/MojiCollaTool/MojiCollaTool/MojiWindow.xaml
+++ b/MojiCollaTool/MojiCollaTool/MojiWindow.xaml
@@ -15,22 +15,54 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5">
-            <Label x:Name="IDLabel" Content="Moji ID:X" VerticalAlignment="Center" BorderBrush="Black" BorderThickness="1"/>
-            <Button x:Name="ReproductionButton" Margin="5" Click="ReproductionButton_Click">
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Image Source="/Images/copy.png"/>
-                    <TextBlock Text="文字を複製する"/>
-                </StackPanel>
-            </Button>
-            <Button x:Name="DeleteButton" Margin="5" Click="DeleteButton_Click">
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Image Source="/Images/delete.png"/>
-                    <TextBlock Text="文字を削除する"/>
-                </StackPanel>
-            </Button>
-            <CheckBox x:Name="ShowTopMostCheckBox" Content="画面を常に前面に表示する" VerticalAlignment="Center" Margin="5" Checked="ShowTopMostCheckBox_Checked" Unchecked="ShowTopMostCheckBox_Checked"/>
-        </StackPanel>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="0">
+                <Label x:Name="IDLabel" Content="Moji ID:1" VerticalContentAlignment="Center" VerticalAlignment="Stretch" Margin="5" BorderBrush="Black" BorderThickness="1"/>
+                <Button x:Name="ReproductionButton" Margin="5" Click="ReproductionButton_Click">
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Image Source="/Images/copy.png"/>
+                        <TextBlock Text="文字を複製する" Margin="5, 0, 0, 0"/>
+                    </StackPanel>
+                </Button>
+                <Button x:Name="DeleteButton" Margin="5, 5, 50, 5" Click="DeleteButton_Click">
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Image Source="/Images/delete.png"/>
+                        <TextBlock Text="文字を削除する" Margin="5, 0, 0, 0"/>
+                    </StackPanel>
+                </Button>
+                <Button x:Name="SaveFormatButton" Margin="5" Click="SaveFormatButton_Click">
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Image Source="/Images/save16.png"/>
+                        <TextBlock FontSize="10" Margin="5, 0, 0, 0">
+                        文字フォーマットを<LineBreak/>
+                        保存する
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button x:Name="LoadFormatButton" Margin="5" Click="LoadFormatButton_Click">
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Image Source="/Images/folder16.png"/>
+                        <TextBlock FontSize="10" Margin="5, 0, 0, 0">
+                        文字フォーマットを<LineBreak/>
+                        読み出す
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Grid.Column="2">
+                <CheckBox x:Name="ShowTopMostCheckBox" VerticalContentAlignment="Center" VerticalAlignment="Center" Margin="5" Checked="ShowTopMostCheckBox_Checked" Unchecked="ShowTopMostCheckBox_Checked">
+                    <TextBlock>
+                    画面を常に<LineBreak/>
+                    前面に表示する
+                    </TextBlock>
+                </CheckBox>
+            </StackPanel>
+        </Grid>
         <GroupBox Header="テキスト" Grid.Row="1">
             <TextBox x:Name="TextTextBox" Text="サンプル" AcceptsReturn="True" FontSize="20" TextWrapping="Wrap" FontFamily="{Binding ElementName=FontFamilyComboBox, Path=SelectedValue}" VerticalScrollBarVisibility="Visible" Margin="5" TextChanged="TextBox_TextChanged"/>
         </GroupBox>
